// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-field renders a label and description, if they are provided, and no id 1`] = `
<amplify-form-field description="description" label="label">
  <!---->
  <div class="css-jv413b">
    <amplify-label class="css-d9myqf">
      label
    </amplify-label>
    <div class="css-14gnkqd" id="undefined-description">
      description
    </div>
    <div>
      <slot-fb name="input">
        <amplify-input description="description" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field renders no label or description if none are provided 1`] = `
<amplify-form-field>
  <!---->
  <div class="css-jv413b">
    <div>
      <slot-fb name="input">
        <amplify-input placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field renders with an id, if it is provided 1`] = `
<amplify-form-field description="description" field-id="id" label="label">
  <!---->
  <div class="css-jv413b">
    <amplify-label class="css-d9myqf" htmlfor="id">
      label
    </amplify-label>
    <div class="css-14gnkqd" id="id-description">
      description
    </div>
    <div>
      <slot-fb name="input">
        <amplify-input description="description" fieldid="id" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;

exports[`amplify-form-field replaces the input component, if a new one is provided 1`] = `
<amplify-form-field description="description" field-id="id" label="label">
  <!---->
  <div class="css-jv413b">
    <amplify-label class="css-d9myqf" htmlfor="id">
      label
    </amplify-label>
    <div class="css-14gnkqd" id="id-description">
      description
    </div>
    <div>
      <input slot="input">
      <slot-fb hidden="" name="input">
        <amplify-input description="description" fieldid="id" placeholder="" type="text"></amplify-input>
      </slot-fb>
    </div>
  </div>
</amplify-form-field>
`;
